# cspuz

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  python_check.sh  setup.cfg  setup.py
.github/workflows/: check.yml
bench/: generator.py  pzv_problem.py
cspuz/: __init__.py  analyzer.py  array.py  configuration.py  constraints.py  expr.py  generator.py  graph.py  grid.py  grid_division.py  grid_frame.py  problem_serializer.py  solver.py
cspuz/backend/: __init__.py  _binding.py  _subproc.py  backend.py  sugar.py  sugar_extended.py  sugar_like.py  z3.py
cspuz/generator/: __init__.py  builder.py  core.py  deterministic_random.py  segmentation.py  srandom.py
cspuz/puzzle/: akari.py  aquarium.py  building.py  castle_wall.py  compass.py  creek.py  doppelblock.py  fillomino.py  firefly.py  fivecells.py  geradeweg.py  gokigen.py  heyawake.py  lits.py  magnets.py  masyu.py  nanro.py  norinori.py  nurikabe.py  nurimaze.py  nurimisaki.py  putteria.py  shakashaka.py  simpleloop.py  slalom.py  slitherlink.py  star_battle.py  sudoku.py  sukoro.py  util.py  view.py  yajilin.py  yinyang.py
docs/ja/: index.md  tutorial1.md  tutorial2.md  tutorial3.md
docs/source/: conf.py  cspuz.rst  graph.rst  index.rst  solver.rst
examples/: castle_wall.py  compass.py  heyawake.py  slitherlink.py  slitherlink_gen.py  sudoku.py  view.py  yajilin.py
sugar_extension/: CspuzSugarInterface.java  compile.sh  sugar_ext.sh
tests/: test_array.py  test_backend.py  test_constraints.py  test_expr.py  test_graph.py  test_serializer.py  util.py
tests/puzzle/: test_compass.py  test_star_battle.py
