[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cspuz"
version = "0.1.0"

[project.optional-dependencies]
check = ["black", "flake8", "mypy", "pytest"]
test = ["pytest", "z3-solver"]

[tool.setuptools]
packages = ["cspuz", "cspuz.backend", "cspuz.generator", "cspuz.puzzle"]

[tool.black]
line-length = 99

[[tool.mypy.overrides]]
module = [
    "cspuz.graph",
    "cspuz.array",
    "cspuz.solver",
    "cspuz.expr",
    "cspuz.constraints",
    "cspuz.configuration",
    "cspuz.grid_frame",
    "cspuz.problem_serializer",
    "tests.*",
]
disallow_untyped_defs = true
